--- a/WerminalModule/WerminalModule.csproj
+++ b/WerminalModule/WerminalModule.csproj
@@ -34,9 +34,13 @@
     <Reference Include="Microsoft.Practices.Prism">
       <HintPath>..\Werminal\lib\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Prism.MefExtensions">
+      <HintPath>..\Werminal\lib\Microsoft.Practices.Prism.MefExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
