Basic cmd process execution implemented

--- a/WerminalModule/WerminalModule.csproj
+++ b/WerminalModule/WerminalModule.csproj
@@ -63,6 +63,12 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Terminal\Terminal.csproj">
+      <Project>{D89C5D01-77DD-4AA3-9624-62FDC6EE0BC3}</Project>
+      <Name>Terminal</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
