--- a/Werminal/Werminal.csproj
+++ b/Werminal/Werminal.csproj
@@ -41,19 +41,19 @@
       <HintPath>lib\AvalonDock.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism">
-      <HintPath>lib\Microsoft.Practices.Prism.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism.MefExtensions">
-      <HintPath>lib\Microsoft.Practices.Prism.MefExtensions.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.Prism.MefExtensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism.UnityExtensions">
-      <HintPath>lib\Microsoft.Practices.Prism.UnityExtensions.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.Prism.UnityExtensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>lib\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>lib\Microsoft.Practices.Unity.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
