--- a/WerminalModule/WerminalModule.csproj
+++ b/WerminalModule/WerminalModule.csproj
@@ -32,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.Prism">
-      <HintPath>..\Werminal\lib\Microsoft.Practices.Prism.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism.MefExtensions">
-      <HintPath>..\Werminal\lib\Microsoft.Practices.Prism.MefExtensions.dll</HintPath>
+      <HintPath>..\lib\Microsoft.Practices.Prism.MefExtensions.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -51,6 +51,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectoryManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\WerminalView.xaml.cs">
       <DependentUpon>WerminalView.xaml</DependentUpon>
