--- a/WishModule/WishModule.csproj
+++ b/WishModule/WishModule.csproj
@@ -51,6 +51,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompletionManager.cs" />
     <Compile Include="DirectoryManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\WishView.xaml.cs">
