--- a/Wish.Core/Wish.Core.csproj
+++ b/Wish.Core/Wish.Core.csproj
@@ -33,6 +33,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\System.Management.Automation.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompletionManager.cs" />
+    <Compile Include="PowershellController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunspaceSingleton.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Terminal\Terminal.csproj">
