--- a/WishModule/Wish.csproj
+++ b/WishModule/Wish.csproj
@@ -65,6 +65,16 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Terminal\Terminal.csproj">
+      <Project>{D89C5D01-77DD-4AA3-9624-62FDC6EE0BC3}</Project>
+      <Name>Terminal</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Wish.Core\Wish.Core.csproj">
+      <Project>{6D03D360-F5A8-42BF-BC3B-2AD0C38C9FFE}</Project>
+      <Name>Wish.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
