--- a/WishModule/Wish.csproj
+++ b/WishModule/Wish.csproj
@@ -52,9 +52,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Terminal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\TerminalViewModel.cs" />
     <Compile Include="Views\WishView.xaml.cs">
       <DependentUpon>WishView.xaml</DependentUpon>
     </Compile>
@@ -71,6 +69,10 @@
       <Project>{FAFC1291-82F4-4A3A-B70F-111DBF2EC194}</Project>
       <Name>CodeBoxControl</Name>
     </ProjectReference>
+    <ProjectReference Include="..\GuiHelpers\GuiHelpers.csproj">
+      <Project>{DB3AEF34-4A62-4FD0-8FBA-2C1B0E9A9776}</Project>
+      <Name>GuiHelpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Terminal\Terminal.csproj">
       <Project>{D89C5D01-77DD-4AA3-9624-62FDC6EE0BC3}</Project>
       <Name>Terminal</Name>
@@ -79,6 +81,10 @@
       <Project>{6D03D360-F5A8-42BF-BC3B-2AD0C38C9FFE}</Project>
       <Name>Wish.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
