thinning out repo

--- a/dotTrace/0605keypress.dtp.settings
+++ b/dotTrace/0605keypress.dtp.settings
@@ -2,4 +2,12 @@
   <ViewManager>
     <Views />
   </ViewManager>
+  <SettingsComponent>
+    <string>
+      <setting name="Description">
+      </setting>
+    </string>
+    <integer />
+    <boolean />
+  </SettingsComponent>
 </Configuration>
