--- a/WishModule/Wish.Module.csproj
+++ b/WishModule/Wish.Module.csproj
@@ -52,11 +52,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompleteState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardState.cs" />
+    <Compile Include="IState.cs" />
     <Compile Include="TabManager.cs" />
     <Compile Include="Views\WishView.xaml.cs">
       <DependentUpon>WishView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WishModel.cs" />
     <Compile Include="WishModule.cs" />
   </ItemGroup>
   <ItemGroup>
