--- a/WishModule/Wish.Module.csproj
+++ b/WishModule/Wish.Module.csproj
@@ -52,7 +52,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActbViewModel.cs" />
     <Compile Include="CompleteState.cs" />
+    <Compile Include="MyDataTemplateSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardState.cs" />
     <Compile Include="IState.cs" />
@@ -77,6 +79,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ACTB\Aviad.WPF.Controls.csproj">
+      <Project>{952E558B-6E94-49A5-BA50-EC50C044709C}</Project>
+      <Name>Aviad.WPF.Controls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GuiHelpers\GuiHelpers.csproj">
       <Project>{DB3AEF34-4A62-4FD0-8FBA-2C1B0E9A9776}</Project>
       <Name>GuiHelpers</Name>
