--- a/Wish.Core/Wish.Core.csproj
+++ b/Wish.Core/Wish.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CommandEngine.cs" />
     <Compile Include="CommandHistory.cs" />
     <Compile Include="CompletionHelper.cs" />
+    <Compile Include="ICommandHistory.cs" />
     <Compile Include="PowershellController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
