--- a/WishModule/Wish.Module.csproj
+++ b/WishModule/Wish.Module.csproj
@@ -37,6 +37,10 @@
     <Reference Include="Microsoft.Practices.Prism.MefExtensions">
       <HintPath>..\lib\Microsoft.Practices.Prism.MefExtensions.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
