rev0 of command history done

--- a/Tltjr.Core/Tltjr.Core.csproj
+++ b/Tltjr.Core/Tltjr.Core.csproj
@@ -43,6 +43,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wish.Core\Wish.Core.csproj">
+      <Project>{6D03D360-F5A8-42BF-BC3B-2AD0C38C9FFE}</Project>
+      <Name>Wish.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
