--- a/WishModule/Wish.Module.csproj
+++ b/WishModule/Wish.Module.csproj
@@ -97,6 +97,10 @@
       <Project>{6C55B776-26D4-4DB3-A6AB-87E783B2F3D1}</Project>
       <Name>ICSharpCode.AvalonEdit</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Tltjr.Core\Tltjr.Core.csproj">
+      <Project>{0BF86801-F333-4E6A-9893-907CC9B36C31}</Project>
+      <Name>Tltjr.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Wish.Core\Wish.Core.csproj">
       <Project>{6D03D360-F5A8-42BF-BC3B-2AD0C38C9FFE}</Project>
       <Name>Wish.Core</Name>
