--- a/Wish.Common/Wish.Common.csproj
+++ b/Wish.Common/Wish.Common.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{57915513-32AB-44B9-AA63-C2997D1A873B}</ProjectGuid>
+    <ProjectGuid>{4973C447-1643-462D-B58D-69929A3AF289}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wish.Scripts</RootNamespace>
-    <AssemblyName>Wish.Scripts</AssemblyName>
+    <RootNamespace>Wish.Common</RootNamespace>
+    <AssemblyName>Wish.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,19 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Prompt.cs" />
+    <Compile Include="CommandResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repl.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Wish.Commands\Wish.Commands.csproj">
-      <Project>{A80A4CAC-9921-4A07-8735-A940B9775540}</Project>
-      <Name>Wish.Commands</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Wish.Common\Wish.Common.csproj">
-      <Project>{4973C447-1643-462D-B58D-69929A3AF289}</Project>
-      <Name>Wish.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
