--- a/Wish.Scripts.Tests/Wish.Scripts.Tests.csproj
+++ b/Wish.Scripts.Tests/Wish.Scripts.Tests.csproj
@@ -78,6 +78,10 @@
       <Project>{A80A4CAC-9921-4A07-8735-A940B9775540}</Project>
       <Name>Wish.Commands</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Wish.Common\Wish.Common.csproj">
+      <Project>{4973C447-1643-462D-B58D-69929A3AF289}</Project>
+      <Name>Wish.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Wish.Scripts\Wish.Scripts.csproj">
       <Project>{57915513-32AB-44B9-AA63-C2997D1A873B}</Project>
       <Name>Wish.Scripts</Name>
