--- a/Wish.Commands/Wish.Commands.csproj
+++ b/Wish.Commands/Wish.Commands.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -65,6 +66,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Wish.Common\Wish.Common.csproj">
+      <Project>{4973C447-1643-462D-B58D-69929A3AF289}</Project>
+      <Name>Wish.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Wish.Extensions\Wish.Extensions.csproj">
       <Project>{4593E460-0B6D-4F53-B514-0FB39C43D021}</Project>
       <Name>Wish.Extensions</Name>
