--- a/Wish.Module.Tests/Wish.Module.Tests.csproj
+++ b/Wish.Module.Tests/Wish.Module.Tests.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="WishModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkingDirectoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wish.Commands\Wish.Commands.csproj">
