command history work

--- a/Wish.Commands/Wish.Commands.csproj
+++ b/Wish.Commands/Wish.Commands.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DirectoryCommand.cs" />
     <Compile Include="Function.cs" />
     <Compile Include="Completable.cs" />
+    <Compile Include="History.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="IRunner.cs" />
     <Compile Include="PartialPath.cs" />
