--- a/Wish.Commands.Tests/Wish.Commands.Tests.csproj
+++ b/Wish.Commands.Tests/Wish.Commands.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CommandLineTests.cs" />
     <Compile Include="CommandTests.cs" />
     <Compile Include="DirectoryCommandTests.cs" />
+    <Compile Include="HistoryTests.cs" />
     <Compile Include="PartialPathTests.cs" />
     <Compile Include="PowershellArgumentTests.cs" />
     <Compile Include="FunctionTests.cs" />
