--- a/Wish.Common/Wish.Common.csproj
+++ b/Wish.Common/Wish.Common.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CommandResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniqueList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ICSharpCode.AvalonEdit\ICSharpCode.AvalonEdit.csproj">
