--- a/Wish.SearchBox.Tests/Wish.SearchBox.Tests.csproj
+++ b/Wish.SearchBox.Tests/Wish.SearchBox.Tests.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +48,7 @@
     <Compile Include="CommandHistoryViewModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecentDirectoriesViewModelTests.cs" />
+    <Compile Include="SearchBoxViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wish.SearchBox\Wish.SearchBox.csproj">
