initial arg history vm, unique list add range

--- a/Wish.SearchBox.Tests/Wish.SearchBox.Tests.csproj
+++ b/Wish.SearchBox.Tests/Wish.SearchBox.Tests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentHistoryViewModelTests.cs" />
     <Compile Include="CommandHistoryViewModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecentDirectoriesViewModelTests.cs" />
