--- a/Wish.SearchBox/Wish.SearchBox.csproj
+++ b/Wish.SearchBox/Wish.SearchBox.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModelDictionary.cs" />
+    <Compile Include="ViewModels\ArgumentHistoryViewModel.cs" />
     <Compile Include="ViewModels\CommandHistoryViewModel.cs" />
     <Compile Include="ViewModels\RecentDirectoriesViewModel.cs" />
     <Compile Include="ViewModels\SearchBoxViewModel.cs" />
