--- a/Wish.SearchBox.Tests/Wish.SearchBox.Tests.csproj
+++ b/Wish.SearchBox.Tests/Wish.SearchBox.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecentDirectoriesViewModelTests.cs" />
     <Compile Include="SearchBoxViewModelTests.cs" />
+    <Compile Include="ViewModelDictionaryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wish.SearchBox\Wish.SearchBox.csproj">
