--- a/WishModule/Wish.Module.csproj
+++ b/WishModule/Wish.Module.csproj
@@ -59,6 +59,11 @@
   <ItemGroup>
     <Compile Include="CompletionData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\Completion.cs" />
+    <Compile Include="State\IState.cs" />
+    <Compile Include="State\KeyDownResult.cs" />
+    <Compile Include="State\Normal.cs" />
+    <Compile Include="State\WishArgs.cs" />
     <Compile Include="Views\WishView.xaml.cs">
       <DependentUpon>WishView.xaml</DependentUpon>
     </Compile>
