--- a/Wish.Scripts/Wish.Scripts.csproj
+++ b/Wish.Scripts/Wish.Scripts.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRepl.cs" />
+    <Compile Include="Profile.cs" />
     <Compile Include="Prompt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repl.cs" />
