support .. cds with trailing directories for cmd

--- a/Wish.Commands.Tests/Wish.Commands.Tests.csproj
+++ b/Wish.Commands.Tests/Wish.Commands.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CommandLineTests.cs" />
     <Compile Include="CommandTests.cs" />
     <Compile Include="HistoryTests.cs" />
+    <Compile Include="MatchStrategyTests.cs" />
     <Compile Include="PartialPathTests.cs" />
     <Compile Include="PowershellArgumentTests.cs" />
     <Compile Include="FunctionTests.cs" />
