--- a/Wish.Extensions.Tests/packages.config
+++ b/Wish.Extensions.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="nspec" version="0.9.53" />
   <package id="NUnit" version="2.5.10.11092" />
 </packages>
